<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">

      <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/toolbar"

        android:background="#ffffff"

        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header"
            android:background="#ffffff"
            android:orientation="vertical"
            >


            <TextView
                android:id="@+id/ttext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/instruction"
                android:textColor="#009688"
                android:textSize="19dp" />

            <EditText
                android:id="@+id/username_field"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/password_field"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:singleLine="true" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />


            <EditText
                android:id="@+id/speciality"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/speciality"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/country"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/country"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/region"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/region"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/structure"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="#dddddd"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/health"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
